# xcc-hook

./: CMakeLists.txt  README.md
config/: xcc-hook-config.cmake.in  xcc-hook.pc.in
include/xcc-hook/: header.h  keyboard.h  mouse.h  xcc.h
source/: dllmain.c
source/mouse/: common.h  other.c  windows.c
